feat : 대화내역 저장 기능 추가

--- a/chatbot/chatbot_mk2.ipynb
+++ b/chatbot/chatbot_mk2.ipynb
@@ -843,7 +843,7 @@
     }
    ],
    "source": [
-    "PATH = './chatbot/db'\n",
+    "PATH = './db'\n",
     "script_path = PATH + '/script_db'\n",
     "script_db = load_vector_store('script_db', script_path)"
    ]
@@ -1052,6 +1052,113 @@
     "      print(response)\n",
     "\n",
     "print(store['test18'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content='정안숙 사건', additional_kwargs={}, response_metadata={}),\n",
+       " AIMessage(content='너, 정인숙 사건에 대해 들어본 적 있어? 이 사건은 정말 미스터리하고 복잡한 이야기야. 너는 어떤 부분이 제일 궁금해?', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='전체 사건', additional_kwargs={}, response_metadata={}),\n",
+       " AIMessage(content='정인숙 사건, 정말 흥미로운 주제지! 이 사건은 단순한 범죄 사건이 아니라, 한국 사회의 권력 구조와 정치적 음모가 얽힌 복잡한 이야기야. 그럼, 이 사건의 배경부터 시작해볼까? \\n\\n1970년대 초, 한국은 군사 정권 하에 있었고, 정치적 억압과 부패가 만연했어. 정인숙은 고위 공무원의 딸로 태어나서 고급 호스티스로 일하며 여러 정치인들과의 관계를 맺었지. 그녀의 죽음은 단순한 개인의 비극이 아니라, 그 시대의 사회적 맥락과 깊은 연관이 있어. \\n\\n너는 정인숙의 개인사에 대해 더 알고 싶어, 아니면 사건 발생 당시의 상황이 더 궁금해?', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='당시의 상황', additional_kwargs={}, response_metadata={}),\n",
+       " AIMessage(content='그럼 사건 발생 당시의 상황에 대해 이야기해볼게! 1970년 3월 17일, 서울은 군사 정권의 압박 속에 있었고, 사회는 정치적 억압과 부패가 만연했어. 그런 시기에 정인숙은 고급 호스티스로 일하면서 여러 정치인들과의 복잡한 관계를 맺고 있었지. \\n\\n그날 밤, 정인숙과 그녀의 넷째 오빠 정종욱은 마포구 합정동에서 총격을 당했어. 정인숙은 머리와 가슴에 총을 맞고 사망했고, 정종욱은 부상을 입었지. 처음에는 교통사고로 위장되었지만, 곧 살인 사건으로 밝혀졌어. \\n\\n이 사건은 단순한 범죄가 아니라, 그 시대의 권력자들의 비리와 음모가 얽힌 복잡한 이야기였어. 너는 이 사건이 어떻게 진행될지 궁금해, 아니면 정인숙의 개인사에 대해 더 알고 싶어?', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='정안숙의 개인사는 어때', additional_kwargs={}, response_metadata={}),\n",
+       " AIMessage(content='정인숙의 개인사? 그건 정말 흥미로운 부분이야! 정인숙은 고위 공무원의 딸로 태어나서, 대학을 중퇴한 후 고급 호스티스로 일하게 되었어. 그녀는 여러 정치인들과의 복잡한 관계를 맺으면서, 그 시대의 권력 구조 속에서 살아갔지.\\n\\n특히 그녀는 3세 아들을 두었고, 아들의 아버지에 대한 의혹이 사건의 중심에 있었어. 그녀의 개인사는 단순히 한 여자의 삶이 아니라, 그 시대의 사회적 맥락과 깊은 연관이 있어. \\n\\n너는 정인숙의 어떤 개인사가 가장 궁금해? 그녀의 가족 관계, 아니면 그녀가 맺었던 정치인들과의 관계?', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_memory = store['test18']\n",
+    "new_memory.messages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 대화 내역 저장 가능한 상태로 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "formatted_messages = \"\\n\".join(\n",
+    "    f\"Human: {message.content}\" if index % 2 == 0 else f\"AI: {message.content}\"\n",
+    "    for index, message in enumerate(new_memory.messages)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: 정안숙 사건\n",
+      "AI: 너, 정인숙 사건에 대해 들어본 적 있어? 이 사건은 정말 미스터리하고 복잡한 이야기야. 너는 어떤 부분이 제일 궁금해?\n",
+      "Human: 전체 사건\n",
+      "AI: 정인숙 사건, 정말 흥미로운 주제지! 이 사건은 단순한 범죄 사건이 아니라, 한국 사회의 권력 구조와 정치적 음모가 얽힌 복잡한 이야기야. 그럼, 이 사건의 배경부터 시작해볼까? \n",
+      "\n",
+      "1970년대 초, 한국은 군사 정권 하에 있었고, 정치적 억압과 부패가 만연했어. 정인숙은 고위 공무원의 딸로 태어나서 고급 호스티스로 일하며 여러 정치인들과의 관계를 맺었지. 그녀의 죽음은 단순한 개인의 비극이 아니라, 그 시대의 사회적 맥락과 깊은 연관이 있어. \n",
+      "\n",
+      "너는 정인숙의 개인사에 대해 더 알고 싶어, 아니면 사건 발생 당시의 상황이 더 궁금해?\n",
+      "Human: 당시의 상황\n",
+      "AI: 그럼 사건 발생 당시의 상황에 대해 이야기해볼게! 1970년 3월 17일, 서울은 군사 정권의 압박 속에 있었고, 사회는 정치적 억압과 부패가 만연했어. 그런 시기에 정인숙은 고급 호스티스로 일하면서 여러 정치인들과의 복잡한 관계를 맺고 있었지. \n",
+      "\n",
+      "그날 밤, 정인숙과 그녀의 넷째 오빠 정종욱은 마포구 합정동에서 총격을 당했어. 정인숙은 머리와 가슴에 총을 맞고 사망했고, 정종욱은 부상을 입었지. 처음에는 교통사고로 위장되었지만, 곧 살인 사건으로 밝혀졌어. \n",
+      "\n",
+      "이 사건은 단순한 범죄가 아니라, 그 시대의 권력자들의 비리와 음모가 얽힌 복잡한 이야기였어. 너는 이 사건이 어떻게 진행될지 궁금해, 아니면 정인숙의 개인사에 대해 더 알고 싶어?\n",
+      "Human: 정안숙의 개인사는 어때\n",
+      "AI: 정인숙의 개인사? 그건 정말 흥미로운 부분이야! 정인숙은 고위 공무원의 딸로 태어나서, 대학을 중퇴한 후 고급 호스티스로 일하게 되었어. 그녀는 여러 정치인들과의 복잡한 관계를 맺으면서, 그 시대의 권력 구조 속에서 살아갔지.\n",
+      "\n",
+      "특히 그녀는 3세 아들을 두었고, 아들의 아버지에 대한 의혹이 사건의 중심에 있었어. 그녀의 개인사는 단순히 한 여자의 삶이 아니라, 그 시대의 사회적 맥락과 깊은 연관이 있어. \n",
+      "\n",
+      "너는 정인숙의 어떤 개인사가 가장 궁금해? 그녀의 가족 관계, 아니면 그녀가 맺었던 정치인들과의 관계?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(formatted_messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_memory_document = [\n",
+    "                Document(page_content=formatted_messages, metadata={\"source\": \"conversation\"}),\n",
+    "            ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 추가할 기능\n",
+    "\n",
+    "### 답변 검증 기능\n",
+    "### 스크립트가 없는 경우 자료를 입력 받아 생성\n",
+    "### 랜덤으로 이야기 선택\n",
+    "### 다국어 기능\n",
+    "### 일러스트 생성?\n"
    ]
   }
  ],
