docs : 무작위 스토리 선택 기능 추가

--- a/chatbot/chatbot_mk2.ipynb
+++ b/chatbot/chatbot_mk2.ipynb
@@ -479,7 +479,7 @@
    "metadata": {},
    "source": [
     "### 문서를 분할 후 순차적으로 llm으로 필터링\n",
-    "### 입력 토큰에 여유가 있다면 그대로 사용 가능\n",
+    "### 입력 토큰에 여유가 있다면 분할하지 않고 사용 가능\n",
     "### ConversationSummaryMemory 에 저장된 전체 맥락에 맞는 정보만 남김"
    ]
   },
@@ -1055,6 +1055,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 대화 내역 확인"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -1152,11 +1159,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 랜덤으로 이야기 선택"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "def title_json_data(json_files):\n",
+    "    \"\"\"\n",
+    "    여러 JSON 파일을 읽고 데이터를 통합한 후 특정 형식의 문자열 리스트로 반환\n",
+    "\n",
+    "    Parameters:\n",
+    "        json_files (list): JSON 파일 경로 리스트\n",
+    "\n",
+    "    Returns:\n",
+    "        list: 파일 데이터에서 'title'과 'content'를 읽어 특정 형식으로 변환한 리스트\n",
+    "    \"\"\"\n",
+    "    all_json_data = []\n",
+    "    for file_path in json_files:\n",
+    "        try:\n",
+    "            with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "                data = json.load(file)\n",
+    "                all_json_data.extend(data)\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Error: 파일을 찾을 수 없습니다 - {file_path}\")\n",
+    "        except json.JSONDecodeError:\n",
+    "            print(f\"Error: JSON 파일 형식이 잘못되었습니다 - {file_path}\")\n",
+    "\n",
+    "    # 'title'과 'content'를 읽어 특정 형식으로 반환\n",
+    "    title = [item.get('title', 'N/A') for item in all_json_data]\n",
+    "    return title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_files = ['./documents/filtered_unsolved_cases.json', './documents/korea_crime.json']\n",
+    "titles= title_json_data(json_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "재미난 이야기를 가져오는 중...\n",
+      "이노카시라 공원 토막 살인 사건\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "user_query = input('어떤 이야기를 듣고 싶어?')\n",
+    "if user_query is None or user_query.strip().lower() in [\"재미\", \"아무거나\", \"재밌\", \"암꺼나\"]:\n",
+    "        print(\"재미난 이야기를 가져오는 중...\")\n",
+    "        choice = random.choice(titles)\n",
+    "        print(choice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 추가할 기능\n",
     "\n",
     "### 답변 검증 기능\n",
     "### 스크립트가 없는 경우 자료를 입력 받아 생성\n",
-    "### 랜덤으로 이야기 선택\n",
     "### 다국어 기능\n",
     "### 일러스트 생성?\n"
    ]
